Add a little acceptance test.

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,7 +1,9 @@
 <h1>Hola</h1>
 
-<p>{{date}}</p>
+<p class="js-test-date">{{date}}</p>
 
-<p>{{sugarDateFull}}</p>
+<p class="js-test-sugar-date-full">{{sugarDateFull}}</p>
+
+<p class="js-test-sugar-date-full-en-ca">{{sugarDateFullEnCA}}</p>
 
 {{outlet}}
